# game-of-comonads

./: README.md  game-of-comonads.cabal
GameOfComonads/: Board.hs  Main.hs
