name:                game-of-comonads
version:             0.1.0.0
synopsis:            Game of Life written using a Comonad.
license:             PublicDomain
license-file:        LICENSE
author:              Brian McKenna
maintainer:          brian@brianmckenna.org
category:            Game
build-type:          Simple
cabal-version:       >=1.10

executable game-of-comonads
  main-is:             GameOfComonads/Main.hs
  build-depends:       base >=4.6 && <4.7
                     , comonad >= 3.1 && < 3.2
                     , ncurses >= 0.2 && < 0.3
                     , transformers >= 0.3 && < 0.4
                     , random >= 1.0 && < 1.1
  default-language:    Haskell2010
